src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__classic_9x9__check_classic_9x9_hard_solve_with_solution.snap
---
source: src/solver/tests/logical_solver/puzzles/classic_9x9.rs
expression: result.steps
snapshot_kind: text
---
- rule: NakedSingle
  cells:
    - row: 5
      col: 3
  values:
    - 4
  areas:
    - Row: 5
    - Column: 3
    - Region: 4
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 2
    - row: 1
      col: 3
    - row: 3
      col: 0
    - row: 7
      col: 1
  values:
    - 8
  areas:
    - Column: 2
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 3
    - row: 4
      col: 4
    - row: 6
      col: 0
    - row: 7
      col: 5
  values:
    - 7
  areas:
    - Column: 3
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 5
    - row: 2
      col: 6
    - row: 5
      col: 3
    - row: 6
      col: 4
  values:
    - 4
  areas:
    - Column: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 4
    - row: 2
      col: 2
    - row: 1
      col: 7
  values:
    - 9
  areas:
    - Row: 0
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 4
    - row: 1
      col: 0
    - row: 3
      col: 5
  values:
    - 1
  areas:
    - Region: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: Candidates
  cells: []
  values: []
  areas: []
  affectedCells: []
  candidates:
    - - - 2
        - 6
      - []
      - []
      - []
      - []
      - []
      - - 1
        - 2
        - 7
      - - 1
        - 6
        - 7
      - - 1
        - 2
        - 6
        - 7
    - - []
      - - 4
        - 5
        - 7
      - - 4
        - 5
        - 6
        - 7
      - []
      - - 3
        - 6
      - []
      - - 3
        - 5
        - 7
      - []
      - - 5
        - 6
        - 7
    - - - 2
        - 5
        - 6
      - - 2
        - 5
      - []
      - []
      - []
      - - 3
        - 6
      - []
      - - 3
        - 5
        - 6
        - 8
      - - 2
        - 5
        - 6
        - 8
    - - []
      - - 2
        - 5
        - 7
      - - 2
        - 3
        - 5
        - 7
      - []
      - - 2
        - 3
        - 5
        - 6
      - []
      - - 2
        - 5
        - 7
      - []
      - - 2
        - 5
        - 6
        - 7
    - - - 2
        - 3
        - 4
        - 5
        - 9
      - - 1
        - 2
        - 4
        - 5
        - 9
      - - 1
        - 2
        - 3
        - 4
        - 5
      - - 3
        - 6
      - []
      - - 3
        - 5
        - 6
        - 8
      - - 1
        - 2
        - 5
        - 8
        - 9
      - - 1
        - 5
        - 6
        - 8
      - - 1
        - 2
        - 5
        - 6
        - 8
        - 9
    - - - 2
        - 5
        - 9
      - []
      - - 1
        - 2
        - 5
        - 7
      - []
      - - 2
        - 5
        - 8
      - - 5
        - 8
      - - 1
        - 2
        - 5
        - 7
        - 8
        - 9
      - - 1
        - 5
        - 7
        - 8
      - []
    - - []
      - - 1
        - 2
        - 5
        - 9
      - - 1
        - 2
        - 3
        - 5
        - 6
      - - 1
        - 3
        - 6
      - []
      - - 3
        - 5
        - 6
        - 8
        - 9
      - - 1
        - 3
        - 5
        - 8
        - 9
      - - 1
        - 3
        - 5
        - 8
      - - 1
        - 5
        - 8
        - 9
    - - - 3
        - 4
        - 5
        - 9
      - []
      - - 1
        - 3
        - 4
        - 5
      - []
      - - 3
        - 5
      - []
      - []
      - - 1
        - 3
        - 5
      - - 1
        - 4
        - 5
        - 9
    - - - 3
        - 4
        - 5
        - 6
        - 9
      - - 1
        - 4
        - 5
        - 9
      - - 1
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 3
        - 6
      - - 3
        - 5
        - 6
        - 8
      - - 3
        - 5
        - 6
        - 8
        - 9
      - - 1
        - 3
        - 5
        - 7
        - 8
        - 9
      - []
      - - 1
        - 4
        - 5
        - 7
        - 8
        - 9
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 1
      col: 1
    - row: 1
      col: 2
  values:
    - 7
  areas:
    - Region: 0
    - Row: 1
  affectedCells:
    - row: 1
      col: 6
    - row: 1
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: HiddenPairs
  cells:
    - row: 1
      col: 1
    - row: 1
      col: 2
  values:
    - 4
    - 7
  areas:
    - Row: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 1
      col: 6
    - row: 1
      col: 8
  values:
    - 5
  areas:
    - Row: 1
    - Region: 2
  affectedCells:
    - row: 2
      col: 7
    - row: 2
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 6
      col: 2
    - row: 8
      col: 2
  values:
    - 6
  areas:
    - Column: 2
    - Region: 6
  affectedCells:
    - row: 8
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: XWing
  cells:
    - row: 1
      col: 4
    - row: 1
      col: 8
    - row: 3
      col: 4
    - row: 3
      col: 8
  values:
    - 6
  areas:
    - Row: 1
    - Row: 3
    - Column: 4
    - Column: 8
  affectedCells:
    - row: 8
      col: 4
    - row: 0
      col: 8
    - row: 2
      col: 8
    - row: 4
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: XYWing
  cells:
    - row: 1
      col: 4
    - row: 7
      col: 4
    - row: 1
      col: 8
  values:
    - 3
    - 6
    - 5
  areas: []
  affectedCells:
    - row: 7
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: TurbotFish
  cells:
    - row: 5
      col: 0
    - row: 5
      col: 6
    - row: 7
      col: 0
    - row: 7
      col: 8
  values:
    - 9
  areas:
    - Row: 5
    - Row: 7
  affectedCells:
    - row: 4
      col: 8
    - row: 6
      col: 6
    - row: 8
      col: 6
  candidates: ~
  invalidStateReason: ~
