src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__classic_9x9__check_classic_9x9_hard_x_wing_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/classic_9x9.rs
expression: result.steps
snapshot_kind: text
---
- rule: HiddenSingle
  cells:
    - row: 4
      col: 5
    - row: 3
      col: 0
    - row: 2
      col: 3
    - row: 5
      col: 8
  values:
    - 8
  areas:
    - Row: 4
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 7
      col: 0
    - row: 5
      col: 1
    - row: 8
      col: 4
    - row: 6
      col: 6
  values:
    - 3
  areas:
    - Row: 7
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 1
    - row: 2
      col: 2
    - row: 6
      col: 5
    - row: 7
      col: 7
  values:
    - 2
  areas:
    - Row: 8
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 6
    - row: 6
      col: 1
    - row: 7
      col: 3
    - row: 2
      col: 7
  values:
    - 5
  areas:
    - Row: 8
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 0
  values:
    - 5
  areas:
    - Row: 1
    - Column: 0
    - Region: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 5
    - row: 6
      col: 1
    - row: 1
      col: 0
    - row: 7
      col: 3
    - row: 8
      col: 6
    - row: 2
      col: 7
  values:
    - 5
  areas:
    - Row: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: Candidates
  cells: []
  values: []
  areas: []
  affected_cells: []
  candidates:
    - - []
      - - 1
        - 8
      - - 1
        - 3
        - 8
      - - 1
        - 2
        - 3
        - 4
      - []
      - []
      - - 2
        - 4
        - 8
      - - 3
        - 4
        - 8
      - []
    - - []
      - []
      - - 3
        - 8
        - 9
      - - 2
        - 3
        - 6
      - - 2
        - 6
      - []
      - []
      - - 3
        - 6
        - 8
      - - 2
        - 3
        - 6
        - 9
    - - - 1
        - 7
      - - 1
        - 7
        - 9
      - []
      - []
      - - 1
        - 4
        - 6
      - - 1
        - 3
        - 4
        - 6
      - - 4
        - 6
        - 9
      - []
      - - 3
        - 6
        - 9
    - - []
      - - 1
        - 6
        - 7
      - - 1
        - 5
        - 6
        - 7
      - - 1
        - 2
        - 3
        - 4
        - 6
      - - 1
        - 2
        - 4
        - 5
        - 6
      - - 1
        - 3
        - 4
        - 6
      - - 2
        - 4
        - 6
        - 7
      - []
      - - 1
        - 2
        - 3
        - 5
        - 6
    - - - 1
        - 2
        - 4
      - - 1
        - 6
        - 9
      - - 1
        - 5
        - 6
        - 9
      - - 1
        - 2
        - 3
        - 4
        - 6
        - 9
      - []
      - []
      - - 2
        - 4
        - 6
      - - 1
        - 3
        - 4
        - 6
      - - 1
        - 2
        - 3
        - 5
        - 6
    - - - 1
        - 2
        - 4
        - 7
      - []
      - - 1
        - 5
        - 6
        - 7
        - 9
      - - 1
        - 2
        - 4
        - 6
        - 9
      - - 1
        - 2
        - 4
        - 5
        - 6
      - - 1
        - 4
        - 6
        - 9
      - - 2
        - 4
        - 6
        - 7
      - - 1
        - 4
        - 6
        - 7
      - []
    - - - 1
        - 7
      - []
      - - 1
        - 6
        - 7
        - 8
      - - 1
        - 4
        - 6
        - 7
        - 9
      - - 1
        - 4
        - 6
        - 8
      - []
      - []
      - - 1
        - 6
        - 7
        - 8
      - - 1
        - 6
        - 9
    - - []
      - - 1
        - 6
        - 7
        - 8
      - []
      - []
      - - 1
        - 6
        - 8
      - - 1
        - 6
        - 9
      - - 6
        - 7
        - 8
        - 9
      - []
      - - 1
        - 6
        - 9
    - - []
      - []
      - - 1
        - 6
        - 7
        - 8
      - - 1
        - 6
        - 7
      - []
      - - 1
        - 6
      - []
      - - 1
        - 6
        - 7
        - 8
      - []
  invalid_state_reason: ~
- rule: NakedPairs
  cells:
    - row: 2
      col: 0
    - row: 6
      col: 0
  values:
    - 1
    - 7
  areas:
    - Column: 0
  affected_cells:
    - row: 4
      col: 0
    - row: 5
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: XWing
  cells:
    - row: 1
      col: 2
    - row: 1
      col: 7
    - row: 8
      col: 2
    - row: 8
      col: 7
  values:
    - 8
  areas:
    - Row: 1
    - Row: 8
    - Column: 2
    - Column: 7
  affected_cells:
    - row: 0
      col: 2
    - row: 6
      col: 2
    - row: 0
      col: 7
    - row: 6
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 4
  values:
    - 8
  areas:
    - Row: 6
  affected_cells:
    - row: 7
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 3
  values:
    - 4
  areas:
    - Row: 6
  affected_cells:
    - row: 0
      col: 3
    - row: 3
      col: 3
    - row: 4
      col: 3
    - row: 5
      col: 3
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 8
  values:
    - 9
  areas:
    - Row: 6
  affected_cells:
    - row: 1
      col: 8
    - row: 2
      col: 8
    - row: 7
      col: 8
    - row: 7
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 3
  values:
    - 7
  areas:
    - Column: 3
  affected_cells:
    - row: 8
      col: 2
    - row: 8
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 7
      col: 5
  values:
    - 9
  areas:
    - Region: 7
  affected_cells:
    - row: 7
      col: 6
    - row: 7
      col: 8
    - row: 5
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 2
  values:
    - 9
  areas:
    - Row: 1
  affected_cells:
    - row: 4
      col: 2
    - row: 5
      col: 2
    - row: 2
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 6
  values:
    - 9
  areas:
    - Column: 6
  affected_cells:
    - row: 2
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 7
  values:
    - 8
  areas:
    - Row: 1
  affected_cells:
    - row: 8
      col: 7
    - row: 0
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 3
  values:
    - 9
  areas:
    - Row: 5
  affected_cells:
    - row: 4
      col: 3
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 1
  values:
    - 9
  areas:
    - Column: 1
  affected_cells:
    - row: 4
      col: 3
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 2
  values:
    - 3
  areas:
    - Column: 2
  affected_cells:
    - row: 0
      col: 3
    - row: 0
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 2
  values:
    - 8
  areas:
    - Column: 2
  affected_cells:
    - row: 8
      col: 7
    - row: 7
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 1
  values:
    - 8
  areas:
    - Region: 0
  affected_cells:
    - row: 0
      col: 6
    - row: 7
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 7
  values:
    - 4
  areas: []
  affected_cells:
    - row: 0
      col: 6
    - row: 4
      col: 7
    - row: 5
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 6
  values:
    - 2
  areas: []
  affected_cells:
    - row: 0
      col: 3
    - row: 3
      col: 6
    - row: 4
      col: 6
    - row: 5
      col: 6
    - row: 1
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 3
  values:
    - 1
  areas: []
  affected_cells:
    - row: 3
      col: 3
    - row: 4
      col: 3
    - row: 2
      col: 4
    - row: 2
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 7
      col: 6
  values:
    - 8
  areas:
    - Row: 7
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 7
  values:
    - 3
  areas:
    - Column: 7
  affected_cells:
    - row: 4
      col: 3
    - row: 4
      col: 8
    - row: 3
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 7
      col: 1
  values:
    - 7
  areas:
    - Row: 7
  affected_cells:
    - row: 2
      col: 1
    - row: 3
      col: 1
    - row: 6
      col: 0
    - row: 6
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 7
  values:
    - 7
  areas:
    - Region: 8
  affected_cells:
    - row: 6
      col: 0
    - row: 6
      col: 2
    - row: 5
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 1
  values:
    - 1
  areas: []
  affected_cells:
    - row: 2
      col: 0
    - row: 3
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 0
  values:
    - 1
  areas: []
  affected_cells:
    - row: 6
      col: 2
    - row: 2
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 0
  values:
    - 7
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 1
  values:
    - 6
  areas: []
  affected_cells:
    - row: 3
      col: 2
    - row: 3
      col: 3
    - row: 3
      col: 4
    - row: 3
      col: 5
    - row: 3
      col: 6
    - row: 3
      col: 8
    - row: 4
      col: 2
    - row: 5
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 2
  values:
    - 6
  areas: []
  affected_cells:
    - row: 3
      col: 2
    - row: 4
      col: 2
    - row: 5
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 4
      col: 6
    - row: 5
      col: 6
  values:
    - 6
  areas:
    - Column: 6
    - Region: 5
  affected_cells:
    - row: 4
      col: 8
    - row: 5
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 7
  values:
    - 1
  areas: []
  affected_cells:
    - row: 5
      col: 2
    - row: 5
      col: 4
    - row: 5
      col: 5
    - row: 8
      col: 7
    - row: 3
      col: 8
    - row: 4
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 7
  values:
    - 6
  areas: []
  affected_cells:
    - row: 8
      col: 5
    - row: 7
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 8
  values:
    - 1
  areas: []
  affected_cells:
    - row: 7
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 5
  values:
    - 1
  areas: []
  affected_cells:
    - row: 3
      col: 5
    - row: 7
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 4
  values:
    - 6
  areas: []
  affected_cells:
    - row: 1
      col: 4
    - row: 2
      col: 4
    - row: 5
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 4
  values:
    - 2
  areas: []
  affected_cells:
    - row: 1
      col: 3
    - row: 3
      col: 4
    - row: 5
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 4
  values:
    - 4
  areas: []
  affected_cells:
    - row: 2
      col: 5
    - row: 3
      col: 4
    - row: 5
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 4
  values:
    - 5
  areas: []
  affected_cells:
    - row: 5
      col: 2
    - row: 3
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 4
  values:
    - 1
  areas: []
  affected_cells:
    - row: 3
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 2
  values:
    - 7
  areas: []
  affected_cells:
    - row: 5
      col: 6
    - row: 3
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 2
  values:
    - 5
  areas: []
  affected_cells:
    - row: 3
      col: 8
    - row: 4
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 8
  values:
    - 2
  areas: []
  affected_cells:
    - row: 3
      col: 3
    - row: 4
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 2
  values:
    - 1
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 3
  values:
    - 3
  areas: []
  affected_cells:
    - row: 3
      col: 5
    - row: 1
      col: 3
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 8
  values:
    - 5
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 3
  values:
    - 6
  areas: []
  affected_cells:
    - row: 1
      col: 8
    - row: 4
      col: 3
    - row: 2
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 5
  values:
    - 4
  areas: []
  affected_cells:
    - row: 3
      col: 6
    - row: 5
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 8
  values:
    - 3
  areas: []
  affected_cells:
    - row: 2
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 5
  values:
    - 3
  areas: []
  affected_cells:
    - row: 2
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 6
  values:
    - 7
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 2
  areas: []
  affected_cells:
    - row: 4
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 5
  values:
    - 6
  areas: []
  affected_cells:
    - row: 5
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 8
  values:
    - 6
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 4
  areas: []
  affected_cells:
    - row: 4
      col: 6
    - row: 5
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 6
  values:
    - 4
  areas: []
  affected_cells:
    - row: 5
      col: 0
    - row: 4
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 6
  values:
    - 6
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 2
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
