src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__classic_9x9__check_classic_9x9_hard_xy_wing_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/classic_9x9.rs
expression: result.steps
snapshot_kind: text
---
- rule: NakedSingle
  cells:
    - row: 3
      col: 6
  values:
    - 6
  areas:
    - Row: 3
    - Column: 6
    - Region: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 0
    - row: 1
      col: 6
    - row: 4
      col: 1
    - row: 6
      col: 2
  values:
    - 4
  areas:
    - Column: 0
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 6
    - row: 5
      col: 8
    - row: 7
      col: 1
    - row: 6
      col: 7
  values:
    - 5
  areas:
    - Column: 6
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 7
    - row: 2
      col: 3
    - row: 3
      col: 6
    - row: 7
      col: 8
  values:
    - 6
  areas:
    - Column: 7
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 8
    - row: 1
      col: 6
    - row: 4
      col: 1
    - row: 6
      col: 2
  values:
    - 4
  areas:
    - Column: 8
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 7
  values:
    - 9
  areas:
    - Row: 3
    - Column: 7
    - Region: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 8
    - row: 2
      col: 0
    - row: 1
      col: 5
  values:
    - 8
  areas:
    - Row: 0
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 8
    - row: 1
      col: 7
    - row: 6
      col: 6
  values:
    - 3
  areas:
    - Column: 8
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 0
    - row: 0
      col: 2
    - row: 3
      col: 4
  values:
    - 1
  areas:
    - Row: 4
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 4
    - row: 3
      col: 2
    - row: 6
      col: 3
  values:
    - 2
  areas:
    - Row: 4
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 8
    - row: 1
      col: 1
    - row: 4
      col: 7
  values:
    - 7
  areas:
    - Region: 2
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 8
  values:
    - 1
  areas:
    - Row: 6
    - Column: 8
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 8
  values:
    - 2
  areas:
    - Column: 8
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 7
  values:
    - 1
  areas:
    - Region: 2
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 7
  values:
    - 2
  areas:
    - Column: 7
    - Region: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 6
  values:
    - 1
  areas:
    - Region: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 3
    - row: 4
      col: 0
    - row: 0
      col: 2
    - row: 3
      col: 4
  values:
    - 1
  areas:
    - Row: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 1
    - row: 0
      col: 2
    - row: 3
      col: 4
    - row: 4
      col: 0
    - row: 6
      col: 8
  values:
    - 1
  areas:
    - Column: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 7
      col: 5
    - row: 0
      col: 2
    - row: 2
      col: 7
    - row: 3
      col: 4
    - row: 6
      col: 8
  values:
    - 1
  areas:
    - Column: 5
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: Candidates
  cells: []
  values: []
  areas: []
  affectedCells: []
  candidates:
    - - []
      - - 2
        - 3
      - []
      - - 3
        - 5
        - 7
      - - 3
        - 5
        - 7
      - - 2
        - 5
        - 7
      - []
      - []
      - []
    - - - 5
        - 6
        - 9
      - []
      - - 5
        - 6
        - 9
      - []
      - - 5
        - 9
      - []
      - []
      - []
      - []
    - - []
      - - 2
        - 3
        - 9
      - - 3
        - 9
      - []
      - - 3
        - 4
        - 9
      - - 2
        - 4
        - 9
      - []
      - []
      - []
    - - - 3
        - 5
        - 7
      - - 3
        - 8
      - []
      - - 3
        - 5
        - 7
        - 8
      - []
      - - 5
        - 7
      - []
      - []
      - []
    - - []
      - []
      - - 5
        - 9
      - - 5
        - 9
      - []
      - []
      - []
      - []
      - []
    - - - 3
        - 6
        - 7
        - 9
      - - 3
        - 6
        - 8
        - 9
      - - 3
        - 6
        - 7
        - 8
        - 9
      - - 3
        - 4
        - 7
        - 8
        - 9
      - - 3
        - 4
        - 7
        - 8
        - 9
      - - 4
        - 7
        - 9
      - []
      - []
      - []
    - - - 6
        - 7
        - 9
      - - 6
        - 8
        - 9
      - []
      - []
      - - 6
        - 7
        - 8
        - 9
      - - 7
        - 9
      - []
      - []
      - []
    - - - 2
        - 3
        - 7
        - 9
      - []
      - - 3
        - 7
        - 8
        - 9
      - - 4
        - 7
        - 8
        - 9
      - - 4
        - 7
        - 8
        - 9
      - []
      - - 2
        - 7
      - - 4
        - 8
      - []
    - - - 2
        - 6
        - 7
      - []
      - - 6
        - 7
        - 8
      - - 4
        - 5
        - 7
        - 8
      - - 4
        - 5
        - 6
        - 7
        - 8
      - []
      - - 2
        - 7
      - - 4
        - 8
      - []
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 1
      col: 0
    - row: 1
      col: 2
  values:
    - 5
  areas:
    - Region: 0
    - Row: 1
  affectedCells:
    - row: 1
      col: 4
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 4
  values:
    - 9
  areas: []
  affectedCells:
    - row: 1
      col: 0
    - row: 1
      col: 2
    - row: 2
      col: 4
    - row: 5
      col: 4
    - row: 6
      col: 4
    - row: 7
      col: 4
    - row: 2
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: XYWing
  cells:
    - row: 3
      col: 5
    - row: 4
      col: 3
    - row: 6
      col: 5
  values:
    - 5
    - 7
    - 9
  areas: []
  affectedCells:
    - row: 7
      col: 3
    - row: 5
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 5
  values:
    - 9
  areas:
    - Column: 5
  affectedCells:
    - row: 6
      col: 0
    - row: 6
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: HiddenPairs
  cells:
    - row: 7
      col: 0
    - row: 7
      col: 2
  values:
    - 3
    - 9
  areas:
    - Row: 7
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 7
      col: 6
  values:
    - 2
  areas:
    - Row: 7
  affectedCells:
    - row: 8
      col: 6
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 0
  values:
    - 2
  areas:
    - Column: 0
  affectedCells:
    - row: 8
      col: 6
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 6
  values:
    - 7
  areas: []
  affectedCells:
    - row: 8
      col: 2
    - row: 8
      col: 3
    - row: 8
      col: 4
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 2
  values:
    - 7
  areas:
    - Column: 2
  affectedCells:
    - row: 5
      col: 0
    - row: 5
      col: 3
    - row: 5
      col: 4
    - row: 5
      col: 5
    - row: 3
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 0
  values:
    - 7
  areas:
    - Region: 6
  affectedCells:
    - row: 6
      col: 4
    - row: 3
      col: 0
    - row: 5
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 5
  values:
    - 4
  areas: []
  affectedCells:
    - row: 5
      col: 3
    - row: 5
      col: 4
    - row: 2
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 5
  values:
    - 2
  areas: []
  affectedCells:
    - row: 2
      col: 1
    - row: 0
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 1
  values:
    - 2
  areas:
    - Row: 0
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 4
  values:
    - 4
  areas:
    - Row: 2
  affectedCells:
    - row: 7
      col: 4
    - row: 8
      col: 4
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 2
  values:
    - 8
  areas:
    - Column: 2
  affectedCells:
    - row: 8
      col: 3
    - row: 8
      col: 4
    - row: 8
      col: 7
    - row: 6
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 1
  values:
    - 6
  areas: []
  affectedCells:
    - row: 6
      col: 4
    - row: 5
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 7
  values:
    - 4
  areas: []
  affectedCells:
    - row: 8
      col: 3
    - row: 7
      col: 7
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 4
  values:
    - 8
  areas: []
  affectedCells:
    - row: 5
      col: 4
    - row: 7
      col: 4
    - row: 7
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 7
  values:
    - 8
  areas: []
  affectedCells:
    - row: 7
      col: 3
    - row: 7
      col: 4
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 3
  values:
    - 5
  areas: []
  affectedCells:
    - row: 8
      col: 4
    - row: 0
      col: 3
    - row: 3
      col: 3
    - row: 4
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 9
  areas: []
  affectedCells:
    - row: 4
      col: 2
    - row: 5
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 4
  values:
    - 3
  areas: []
  affectedCells:
    - row: 5
      col: 0
    - row: 5
      col: 1
    - row: 5
      col: 3
    - row: 0
      col: 4
    - row: 3
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 4
  values:
    - 7
  areas: []
  affectedCells:
    - row: 7
      col: 3
    - row: 0
      col: 4
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 4
  values:
    - 6
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 4
  values:
    - 5
  areas: []
  affectedCells:
    - row: 0
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 2
  values:
    - 5
  areas: []
  affectedCells:
    - row: 1
      col: 2
    - row: 3
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 3
  values:
    - 8
  areas: []
  affectedCells:
    - row: 5
      col: 1
    - row: 3
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 3
  values:
    - 4
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 5
  values:
    - 7
  areas: []
  affectedCells:
    - row: 0
      col: 3
    - row: 3
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 2
  values:
    - 6
  areas: []
  affectedCells:
    - row: 1
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 0
  values:
    - 3
  areas: []
  affectedCells:
    - row: 3
      col: 1
    - row: 7
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 3
  values:
    - 7
  areas: []
  affectedCells:
    - row: 3
      col: 5
    - row: 0
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 1
  values:
    - 9
  areas: []
  affectedCells:
    - row: 5
      col: 0
    - row: 2
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 3
  values:
    - 3
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 0
  values:
    - 5
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 1
  values:
    - 3
  areas: []
  affectedCells:
    - row: 2
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 1
  values:
    - 8
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 5
  values:
    - 5
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 6
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 0
  values:
    - 9
  areas: []
  affectedCells:
    - row: 7
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 2
  values:
    - 9
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 2
  values:
    - 3
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
